--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,42 @@
 body {
     background-color: ghostwhite;
 }
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    padding: 0;
+    margin: 0;
+    min-height: 87vh;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+}
+
+header img {
+    max-width: 17vw;
+    border-radius: 50%;
+}
+
+.padding {
+    min-height: 87vh;
+}
+
+.profile-picture-uploader {
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-content {
+    text-align: initial;
+}
