--- a/client/style.css
+++ b/client/style.css
@@ -14,10 +14,6 @@ body {
     font-size: 16px;
 }
 
-main {
-    min-height: 100vh;
-}
-
 /* Header */
 
 header {
@@ -34,23 +30,26 @@ header img {
     border-radius: 50%;
 }
 
+.logo img {
+    object-fit: contain;
+    background-color: #d3d4d6;
+}
+
 header span {
     align-self: center;
 }
 
-.padding {
-    min-height: 85vh;
-}
-
 .welcome {
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
+.welcome {
+    min-height: 100vh;
+}
+
 .padding-welcome {
-    min-height: 8vh;
     background-color: ghostwhite;
 }
 
@@ -87,6 +86,7 @@ header span {
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     border: 2px solid red;
@@ -98,24 +98,38 @@ header span {
 .registration-form form {
     display: flex;
     flex-direction: column;
-    width: 32%;
+    width: 35%;
     align-items: center;
 }
 
 .c2 {
-    margin: 10% auto 5%;
+    margin: 5% auto 5%;
     background-color: rgb(9, 9, 69);
     border-radius: 15px;
     max-width: 30%;
 }
 
+@media (min-width: 1200px) {
+    .c2,
+    .c2-login {
+        max-width: 23%;
+    }
+}
+
 .c2-login {
-    max-width: 24%;
+    max-width: 30%;
     text-align: center;
-    padding-top: 1%;
-    padding-bottom: 1%;
+    padding: 1%;
     border: 2px solid red;
-    transform: translateY(-20%);
+    transform: translateY(-10%);
+}
+
+@media (min-width: 1500px) {
+    .step-2 {
+        max-width: 20%;
+        padding: 1% 5% 1% 5%;
+        max-width: 24%;
+    }
 }
 
 .username {
@@ -134,7 +148,7 @@ header span {
 
 .btn {
     font-weight: bold;
-    width: 230px;
+    width: 200px;
     margin: 0 35px 20px;
     height: 45px;
     padding: 6px 15px;
@@ -144,6 +158,8 @@ header span {
     background: #ee9ba3;
     color: white;
     font-size: 14px;
+    margin-top: 5px;
+    margin-bottom: 45px;
 }
 
 .btn-login {
@@ -183,4 +199,28 @@ footer {
     display: flex;
     justify-content: center;
     border: 2px solid blue;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.btn-logout {
+    background: none !important;
+    border: none;
+    padding: 0 !important;
+    color: #069;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+/* App styling */
+
+.app {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+}
+
+#error {
+    color: red;
 }
