--- a/client/style.css
+++ b/client/style.css
@@ -244,7 +244,7 @@ footer {
     background-color: rgb(9, 9, 69);
     border-radius: 15px;
     width: 50%;
-    min-height: 44vh;
+    min-height: 50vh;
     border: 2px solid red;
     display: flex;
     color: white;
@@ -253,22 +253,21 @@ footer {
 }
 
 .profile-img {
-    max-height: 80%;
-    max-width: 80%;
+    max-width: 100%;
     border: 1px solid cornsilk;
     border-radius: 8px;
 }
 
 .p-wrapper {
     text-align: center;
-    width: 60%;
+    width: 92%;
 }
 
 .aside {
-    width: 100%;
     max-height: 90%;
     padding: 1rem;
     margin-top: 0;
+    transform: translateX(-35px);
 }
 
 #search-others {
@@ -285,8 +284,9 @@ footer {
 }
 
 .button-image {
+    max-width: 40%;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
 }
@@ -324,4 +324,15 @@ footer {
 
 #list-item a {
     color: wheat;
+}
+
+.list-image {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.list-image img {
+    max-width: 100px;
+    max-height: 100px;
 }
