--- a/client/style.css
+++ b/client/style.css
@@ -344,3 +344,39 @@ footer {
 .incoming-list img {
     max-width: 30%;
 }
+
+.chat-wrapper {
+    display: flex;
+    position: fixed;
+    top: 50px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.centered-chat {
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+
+.centered-chat ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+.chat {
+    height: 100%;
+    width: 60vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.chat-form {
+    border: 1px solid blue;
+}
