--- a/client/style.css
+++ b/client/style.css
@@ -347,8 +347,7 @@ footer {
 
 .chat-wrapper {
     display: flex;
-    position: fixed;
-    top: 20px;
+    top: 150px;
     left: 0;
     width: 100%;
     height: 100%;
@@ -400,4 +399,16 @@ footer {
 .chat-form button {
     width: 30%;
     border-radius: 15px;
+}
+
+/* Header Nav */
+
+header ul {
+    list-style: none;
+    padding-left: 0;
+    display: flex;
+}
+
+header li {
+    margin: 2em 1em 1em;
 }
