--- a/client/style.css
+++ b/client/style.css
@@ -412,3 +412,62 @@ header ul {
 header li {
     margin: 2em 1em 1em;
 }
+
+/* "Friends" component styling mobile first: */
+
+.app header {
+    background: red;
+    width: 100%;
+    margin: 0 auto;
+    display: grid;
+    grid-gap: 1em;
+    grid-auto-rows: 80px;
+    grid-auto-flow: column;
+    grid-auto-columns: 0.5fr;
+    grid-template-rows: repeat(2, min-content);
+    grid-template-columns: minmax(60px, 150px) 1fr minmax(60px, 150px);
+    text-align: center;
+    padding: 10px;
+}
+
+header span img {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+}
+
+#header-logo {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+}
+
+/* Nav in Header */
+.header-nav {
+    grid-column: 2 / span 1;
+    grid-row: 2 / span 1;
+}
+
+.header-nav ul {
+    display: flex;
+    flex-direction: column;
+}
+
+.profile-picture {
+    grid-column: 3 / 4;
+}
+
+/* Profile template Responsive mobile-first */
+
+.profile {
+    display: grid;
+    grid-template-columns: minmax(200px, 1fr);
+    width: auto;
+    margin: 0 auto;
+}
+
+.aside {
+    transform: translateX(0);
+}
+
+.button-image {
+    max-width: 100%;
+}
