--- a/client/style.css
+++ b/client/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: ghostwhite;
+    background-color: rgb(9, 9, 69);
 }
 
 * {
@@ -241,7 +241,7 @@ footer {
 .profile {
     margin: 5% auto 5%;
     background-color: rgb(9, 9, 69);
-    border-radius: 15px;
+
     width: 50%;
     min-height: 50vh;
     border: 2px solid red;
@@ -302,12 +302,10 @@ footer {
 
 .main-find {
     background-color: rgb(9, 9, 69);
-    border-radius: 15px;
-    margin: 5%;
+    height: 100%;
 }
 
 .find-people {
-    margin: 5% auto 5%;
     background-color: rgb(9, 9, 69);
     border-radius: 15px;
     min-height: 40vh;
@@ -427,6 +425,7 @@ header li {
     grid-template-columns: minmax(60px, 150px) 1fr minmax(60px, 150px);
     text-align: center;
     padding: 10px;
+    font-size: 1.125em;
 }
 
 header span img {
@@ -479,6 +478,7 @@ header span img {
 
 .bio-editor {
     text-align: center;
+    margin-bottom: 5%;
 }
 
 .app footer {
@@ -490,4 +490,46 @@ footer button {
     font-size: 0.75em;
     color: royalblue;
     text-decoration: none;
+}
+
+.p-wrapper img {
+    width: 85%;
+}
+
+@media (min-width: 500px) {
+    .profile {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 1fr 50% 1fr;
+    }
+    .profile h2 {
+        font-size: 3em;
+    }
+
+    .app header {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: 1fr;
+        justify-items: center;
+        align-items: center;
+    }
+    .header-nav {
+        grid-column: 2 / span 1;
+        grid-row: 1 / span 1;
+    }
+    .header-nav ul {
+        flex-direction: row;
+    }
+    .p-wrapper img {
+        max-height: 70%;
+    }
+    .aside,
+    .button-image {
+        grid-row: 2 / span 1;
+    }
+    .main-profile {
+        background: royalblue;
+        margin: 0;
+    }
+    .search input {
+        font-size: 1.25em;
+    }
 }
