--- a/client/style.css
+++ b/client/style.css
@@ -534,6 +534,15 @@ footer button {
     max-width: 300px;
 }
 
+.profile-text {
+    text-align: end;
+    padding-right: 2%;
+}
+
+.h1-profile {
+    text-align: center;
+}
+
 @media (min-width: 500px) {
     .profile {
         grid-template-columns: repeat(2, 1fr);
